gccida/g0/def_reaches_here_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/def_reaches_here_p/src/gcse.c:3829:111: error: use of undeclared identifier 'uid_cuid_1'
if ( ( ( reaching_defs[*( int *)( basic_block_for_insn->data.l[insn->fld[0].rtint] + 88)]->elms[*( ( _DWORD *)uid_cuid_1 
                                                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/def_reaches_here_p/src/gcse.c:3830:51: error: use of undeclared identifier 'uid_cuid_1'
+ def_insn->fld[0].rtint) >> 6] >> ( *( ( _BYTE *)uid_cuid_1 + 4 * def_insn->fld[0].rtint) & 0x3F)) & 1) != 0 ) 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/def_reaches_here_p/src/gcse.c:3835:20: error: use of undeclared identifier 'uid_cuid_1'
if ( *( ( _DWORD *)uid_cuid_1 + def_insn->fld[0].rtint) >= *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/def_reaches_here_p/src/gcse.c:3835:74: error: use of undeclared identifier 'uid_cuid_1'
if ( *( ( _DWORD *)uid_cuid_1 + def_insn->fld[0].rtint) >= *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) ) 
                                                                         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/def_reaches_here_p/src/obj/gcse.o] Error 1
